# CppDLLExperiments

./: README.md
InterfaceDLL/: CMakeLists.txt
InterfaceDLL/app/: CMakeLists.txt  main.cpp
InterfaceDLL/interface/: factory.h  imodule_a.h
InterfaceDLL/module_a/: CMakeLists.txt  module_a.cpp  module_a.h  module_a_impl.h
InterfaceDLL/module_b/: CMakeLists.txt  module_b.cpp
PrototypeDLL/: CMakeLists.txt
PrototypeDLL/interface/: CMakeLists.txt  imodule_b.h
PrototypeDLL/module_a/: CMakeLists.txt  module_a.cpp
PrototypeDLL/module_b/: module_b.h  module_b_impl.h
PrototypeLuminError/: CMakeLists.txt
PrototypeLuminError/application/: Application.cpp  Application.h
PrototypeLuminError/example/example001/: example001.cpp
PrototypeLuminError/interface/: ISDLCore.h
PrototypeLuminError/launcher/: CMakeLists.txt
PrototypeLuminError/person/: CMakeLists.txt
PrototypeLuminError/person/src/: Person.cpp
PrototypeLuminError/pet/: CMakeLists.txt
PrototypeLuminError/pet/include/: pet.h
PrototypeLuminError/sdl_core/: CMakeLists.txt
PrototypeLuminError/sdl_core/include/: SDLCore.h
PrototypeLuminError/sdl_core/src/: SDLCore.cpp
PrototypePersonPet/: CMakeLists.txt
PrototypePersonPet/app/: CMakeLists.txt  main.cpp
PrototypePersonPet/app/app_common/: CMakeLists.txt  main.cpp
PrototypePersonPet/app/play1/: CMakeLists.txt
PrototypePersonPet/app/play1/include/: play1.h
PrototypePersonPet/app/play1/src/: play1.cpp
PrototypePersonPet/app/play2/: CMakeLists.txt
PrototypePersonPet/app/play2/include/: play2.h
PrototypePersonPet/app/play2/src/: play2.cpp
PrototypePersonPet/application/: Application.cpp  Application.h  CMakeLists.txt
PrototypePersonPet/case/: CMakeLists.txt
PrototypePersonPet/case/case001/: case001.cpp
PrototypePersonPet/case/case002/: case002.cpp
PrototypePersonPet/core/: Core.cpp  Core.h
PrototypePersonPet/driver/: CMakeLists.txt  driver.cpp
PrototypePersonPet/example/: CMakeLists.txt
PrototypePersonPet/example/example002/: example002.cpp
PrototypePersonPet/framework/: CMakeLists.txt
PrototypePersonPet/framework/include/: Framework.h
PrototypePersonPet/framework/src/: Framework.cpp
PrototypePersonPet/interface/: CMakeLists.txt  IApplication.h  ICase.h  ICase001.h  ICase002.h  ICore.h  IFramework.h  IPerson.h  IPet.h  IPlay1.h  IPlay2.h
PrototypePersonPet/interface/Case/: ICase001.h  ICase002.h
PrototypePersonPet/launcher/: CMakeLists.txt  launcher.cpp
PrototypePersonPet/person/: CMakeLists.txt  Person.cpp  Person.h
PrototypePersonPet/person/include/: Person.h
PrototypePersonPet/person/src/: Person.cpp
PrototypePersonPet/pet/: CMakeLists.txt  Pet.cpp  Pet.h
PrototypePersonPet/pet/include/: pet.h
PrototypePersonPet/pet/src/: pet.cpp
SingleDLL/: CMakeLists.txt
SingleDLL/myapp/src/: main.cpp
SingleDLL/mydll/: CMakeLists.txt
SingleDLL/mydll/include/: mydll.h
SingleDLL/mydll/src/: mydll.cpp
TwoDLLs/: CMakeLists.txt
TwoDLLs/app/: CMakeLists.txt
TwoDLLs/app/src/: main.cpp
TwoDLLs/core/: CMakeLists.txt
TwoDLLs/core/include/: core.h
TwoDLLs/core/src/: core.cpp
TwoDLLs/utils/: CMakeLists.txt
TwoDLLs/utils/include/: utils.h
TwoDLLs/utils/src/: utils.cpp
myapp/: CMakeLists.txt
myapp/src/: main.cpp
